update master branch to v0.22.7